[tool.poetry]
name = "discord-hvz"
version = "0.4.0"
description = "A run-yourself Discord bot to manage Humans vs. Zombies games."
authors = ["ConnerHAnderson <conneranderson.dev@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
discord_hvz = "discord_hvz:main"
main = "discord_hvz:main"
display = "discord_hvz:display"


[tool.poetry.dependencies]
python = ">=3.9.7,<3.11"
py-cord = "^2.4.0"
SQLAlchemy = "^1.4.32"
loguru = "^0.7.0"
google-api-python-client = "^2.42.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0"
regex = "^2023.8.8"
python-dotenv = "^1.0"
pandas = "^1.5"
pydantic-yaml = "^1.1"
pydantic = "2.5.3"
tzdata = "*"
quickchart-io = "^2.0.0"
requests = "^2.31"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
radon = "^5.1.0"
line-profiler = "^3.5.1"
pyinstaller = "^5.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
